@@ -27,6 +27,7 @@
 	- fix: macro table cannot contain NULL pointers (#4263).
 	- fix: last char in rpmrc w/o terminating newline lost (#4361).
 	- prepare for handling \r in macro exapnsions.
+	- fix: n>1 occurrences of %config(noreplace) should not FA_CREATE (#4355).
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
